Finish March & April recap article

--- a/_config.yaml
+++ b/_config.yaml
@@ -28,6 +28,8 @@ plugins:
   - jekyll-postcss
   - jekyll-purgecss
   - jekyll-seo-tag
+  - jekyll-twitter-plugin
+  - jekyll-youtube
 
 include:
   - _redirects
