--- a/_config.yaml
+++ b/_config.yaml
@@ -1,12 +1,11 @@
 title: Welcomments
-tagline: Fully static comments for Jekyll, Hugo, Eleventy (11ty) and more.
+tagline: Pre-rendered static comments for Jekyll, Hugo, and more.
 permalink: /blog/:title
 description: |
   Welcomments helps you build lightweight, fast, and SEO-friendly
-  comment sections for your site. It works with Jekyll, Hugo,
-  Eleventy (11ty) and lets you store your comments in your GitHub
-  repository alongside your articles. The comments will be rendered
-  as 100% static HTML.
+  comment sections for your site. It works with Jekyll and Hugo,
+  and lets you store your comments in your GitHub repository alongside
+  your articles. The comments will be rendered as 100% static HTML.
 url: https://welcomments.io
 author:
   twitter: welcomments
